--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
@@ -2,7 +2,15 @@
   margin: 1em 0 0;
   
   &.basic-header--list {
+    position: relative;
     margin-bottom: 0;
+    z-index: 100;
+
+    .basic-header__header,
+    .basic-header__content {
+      position: relative;
+      z-index: 100;
+    }
   }
 }
 
@@ -331,7 +339,7 @@
   .basic-header__cta {
     opacity: 0;
   }
-  
+
   .basic-header.in-view {
     animation: fadein .5s ease forwards;
 
