--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/provider-details.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/provider-details.twig
@@ -12,47 +12,48 @@
   {% endif %}
   <ul class="provider-detail__items">
   {% for item in detail.items %}
-  <li class="provider-detail__item">
-    {% if item.label %}
-      <span class="provider-detail__item-label">{{ item.label }}</span>
-    {% endif %}
-    {% if item.link %}
-      <a class="provider-detail__item-link" href="{{item.link.url}}">{{item.link.text}}</a>
-    {% endif %}
+    <li class="provider-detail__item">
+      {% if item.label %}
+        <span class="provider-detail__item-label">{{ item.label }}</span>
+      {% endif %}
+      {% if item.link %}
+        <a class="provider-detail__item-link" href="{{item.link.url}}">{{item.link.text}}</a>
+      {% endif %}
 
-    {% if item.insurance %}
-      {% include "@molecules/modal/modal.twig"  with {
-        modal: item.insurance,
-        class: "button"
-      }%}
-    {% endif %}
+      {% if item.insurance %}
+        {% include "@molecules/modal/modal.twig"  with {
+          modal: item.insurance,
+          class: "button"
+        }%}
+      {% endif %}
 
-    {% if item.title %}
-      <h3 class="provider-detail__item-title">{{ item.title }}</h3>
-    {% endif %}
-    {% if item.text %}
-      {{ item.text }}
-    {% endif %}
-    {% if item.info %}
-      {% include "@molecules/toggle-tip/toggle-tip.twig"  with {
-        info: item.info,
-        info_id: item.info_id
-      }%}
-    {% endif %}
-    {% if item.meta %}
-      <span class="provider-detail__item-meta">{{ item.meta }}</span>
-    {% endif %}
-    {% if item.type == 'location' %}
-      {% include "@organisms/teasers/location-teaser--small/location-teaser--small.twig"  with {
-        name: item.name,
-        address_rows: item.address_rows,
-        direction_url: item.direction_url,
-        phones: item.phones,
-        cta: item.cta
-      }%}
-    {% endif %}
-  </li>
-
+      {% if item.title %}
+        <h3 class="provider-detail__item-title">{{ item.title }}</h3>
+      {% endif %}
+      {% if item.text %}
+        {{ item.text }}
+      {% endif %}
+      {% if item.info %}
+        {% include "@molecules/toggle-tip/toggle-tip.twig"  with {
+          info: item.info,
+          info_id: item.info_id
+        }%}
+      {% endif %}
+      {% if item.meta %}
+        <span class="provider-detail__item-meta">{{ item.meta }}</span>
+      {% endif %}
+      {% if item.type == 'location' %}
+        {% include "@organisms/teasers/location-teaser--small/location-teaser--small.twig"  with {
+          name: item.name,
+          address_rows: item.address_rows,
+          direction_url: item.direction_url,
+          phones: item.phones,
+          cta: item.cta
+        }%}
+      {% endif %}
+    </li>
   {% endfor %}
   </ul>
+  {% block location %}
+  {% endblock %}
 </div>
