--- a/docroot/themes/custom/tower_health/templates/fields/field--field-location-ref.html.twig
+++ b/docroot/themes/custom/tower_health/templates/fields/field--field-location-ref.html.twig
@@ -33,15 +33,20 @@
  * - field_type: The type of the field.
  * - label_display: The display settings for the label.
  *
- *
  * @see template_preprocess_field()
- *
- * No wrappers for cards. It just doesn't flow with flexbox.
  */
 #}
 
-{% include "@molecules/provider-details/provider-details.twig" with {
+{% embed "@molecules/provider-details/provider-details.twig" with {
   "detail": {
     "label": "Locations"|t
   }
 } %}
+
+  {% block location %}
+    {% for item in items %}
+      {{ item.content }}
+    {% endfor %}
+  {% endblock %}
+
+{% endembed %}
