align article cards top so dates always align.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
@@ -26,7 +26,8 @@
   text-decoration: none;
   
   .card--image &,
-  .card--video & {
+  .card--video &,
+  .card--article & {
     justify-content: flex-start;
   }
   
