adjust mobile main nav so there is a divider between the arrow and the link

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_01-main-menu-item.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_01-main-menu-item.scss
@@ -236,8 +236,10 @@
   background-color: transparent;
   border: none;
   overflow: hidden;
+  border-left: 1px solid $trust-ltr;
 
   @include breakpoint($bp3) {
+    border-left: none;
     position: absolute !important;
     height: 1px;
     width: 1px;
