Fix test + capitalization.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -171,3 +171,9 @@
     }
   }
 }
+
+.chosen-container .search-choice
+.chosen-container .chosen-results .active-result,
+.facet-item__value {
+  text-transform: capitalize;
+}
