darken trust-aa just slightly

--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -13,7 +13,7 @@ $uplifting-lt: #ecd879;
 $uplifting-ltr: #f2e5a3;
 $uplifting-ltst: #f8f1ce;
 
-$trust-aa: #4776bd;
+$trust-aa: #4271b8;
 $trust: #4d7bbe;
 $trust-med: #6f8fc9;
 $trust-lt: #8ea5d5;
