wip location header

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
@@ -13,7 +13,7 @@
           <div class="location-details__child">
             {% include "@atoms/icon-button/icon-button.twig" with {
               "url": directions.url,
-              "icon": directions.icon,
+              "button_icon": directions.icon,
               "text": directions.text,
               "variation": directions.variation,
             } %}
