--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/icon-button.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/icon-button.twig
@@ -1,4 +1,4 @@
 <a class="icon-button {% if variation %}icon-button--{{variation}}{% endif %}{% if animated %} js-section-animation{% endif %}" href="{{ url }}">
-  <span class="icon-button__container">{% include icon %}</span>
+  <span class="icon-button__container">{% include button_icon %}</span>
   {{ text }}
 </a>
