focus area tooltip

--- a/docroot/themes/custom/tower_health/templates/fields/field--field-area-interest-ref.html.twig
+++ b/docroot/themes/custom/tower_health/templates/fields/field--field-area-interest-ref.html.twig
@@ -40,6 +40,8 @@
 {% include "@molecules/provider-details/provider-details.twig" with {
   "detail": {
     "label": "Clinical Areas of Focus"|t,
-    "items": focuses
+    "items": focuses,
+    "info": "Lorem ipsum",
+    "info_id": "areas-focus"
   }
 } %}
