add url for providers

--- a/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
@@ -87,7 +87,7 @@
       }
     ],
     "cta": {
-      "href": "#",
+      "url": location_providers_url,
       "label": "View other providers at this location"|t
     }
 } %}
