add appointment phone number

--- a/docroot/themes/custom/tower_health/templates/layout/region--page-header--profile.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/region--page-header--profile.html.twig
@@ -24,8 +24,8 @@
   "rating": rating,
   "review_amt": review_amt,
   "appt_phone": {
-    "number": phone,
-    "label": phone
+    "number": "484-628-4357",
+    "label": "484-628-HELP"
   },
   "appt_url": "#",
   "appt_label": "Request an Appointment"|t
