fix url and meta

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/video-card/video-card.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/video-card/video-card.twig
@@ -5,7 +5,7 @@
     </div>
     <div class='card__content'>
       <h2 class="card__title">{{ title }}</h2>
-      {% if doctor %}
+      {% if meta %}
       <span class="card__meta">{{ meta }}</span>
       {% endif %}
       <div class="card__desc">
