location phone number

--- a/docroot/themes/custom/tower_health/templates/layout/region--page-header--location.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/region--page-header--location.html.twig
@@ -27,17 +27,18 @@
   "phones": [
     {
       "label": "Main"|t,
-      "number": ""
+      "numbers": [
+        {
+          "number": phone
+        }
+      ]
     },
     {
       "label": "Appointments"|t,
       "numbers": [
         {
-          "number": "",
-          "label": ""
-        },
-        {
-          "number": ""
+          "number": appointment_phone,
+          "label": appointment_phone_label
         }
       ],
       "img": {
