--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/_provider-details.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/_provider-details.scss
@@ -33,12 +33,18 @@
     margin-bottom: .5em;
   }
 
-  span,
-  .provider-detail__item-meta {
-    @include adjust-font-size-to($label, .8);
+  span {
+    @include adjust-font-size-to($label, .695);
     font-style: italic;
     display: block;
+    font-weight: 300;
   }
+}
+
+.provider-detail__item-meta {
+  @include adjust-font-size-to($label, .8);
+  font-style: italic;
+  display: block;
 }
 
 .provider-detail__item-label {
