--- a/docroot/themes/custom/tower_health/templates/layout/page--page.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/page--page.html.twig
@@ -49,6 +49,6 @@
   page_header: page.page_header,
   page_content: page.content,
   full_content: page.full_content,
-  top_sidebar: page.sidebar_first,
-  bottom_sidebar: page.sidebar_second,
+  top_sidebar:  page.sidebar_first ?? '',
+  bottom_sidebar:  page.sidebar_second ?? '',
 }%}
