--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/hours-block.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/hours-block.twig
@@ -2,7 +2,7 @@
   <h2 class="hours-block__label">{{ label }}</h2>
   <ul class="hours-block__days">
     {% for hour in hours %}
-      <li class="hours-block__day"><span>{{ hour.title }}:</span> {{ hour.hours }}</li>
+      <li class="hours-block__day"><span>{{ hour.title }}</span> {{ hour.hours }}</li>
     {% endfor %}
   </ul>
   {% if text %}
