--- a/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--icon-button.html.twig
+++ b/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--icon-button.html.twig
@@ -40,7 +40,7 @@
 {% include "@atoms/icon-button/icon-button.twig" with {
   "url": content.field_icon_link.0['#url'],
   "text": content.field_icon_link.0['#title'],
-  "icon": file_url(content.field_icon_button.0['#media'].field_media_file.entity.uri.value),
+  "button_icon": file_url(content.field_icon_button.0['#media'].field_media_file.entity.uri.value),
   "animated": "true",
   "variation": "list"
 } %}
