--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/form-section-item/_form-section-item.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/form-section-item/_form-section-item.twig
@@ -1,8 +1,10 @@
 <div class="form-section__item {% if item.type == 'child_container' %}form-section__item--group {% endif %}{% if item.width %}form-section__item--{{ item.width }}{% endif %} {% if item.conditional_result %}form-section__item--conditional{% endif %}" {% if item.conditional_result %}data-cond-by="{{item.conditional_result}}"{% endif %} {% if item.conditional_control %}data-cond="{{item.conditional_control}}" data-cond-met="false"{% endif %}>
-  {% if item.type != 'drupal-facet-chosen' %}
+  {% if item.type != 'drupal-facet-chosen' and item.type != 'drupal-facet' %}
     {% include "@atoms/05-forms/_form-label.twig" with {
-    title: item.title
+      title: item.title
     }%}
+  {% else %}
+    <label>{{ item.title }}</label>
   {% endif %}
   {% if item.info %}
     {% include "@molecules/toggle-tip/toggle-tip.twig"  with {
@@ -11,8 +13,7 @@
     }%}
   {% endif %}
   {% if item.type == 'drupal-facet-chosen' %}
-    <div class="facets-widget-chosen-dropdown">
-      <label id="facet_specialties_label">{{ item.title }}</label>
+    <div class="facets-widget-chosen-dropdown form-item__dropdown">
       <ul {{ attributes }}>
         {% if item.elements %}
           {% for element in item.elements %}
@@ -22,7 +23,7 @@
       </ul>
     </div>
   {% elseif item.type == 'drupal-facet' %}
-    <ul {{ attributes }}>
+    <ul {{ attributes.removeClass('form-item__label') }}>
       {% if item.elements %}
         {% for element in item.elements %}
           <li {{ element.attributes }}>{{ element.value }}</li>
