--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
@@ -76,6 +76,9 @@
   &--oneHalf {
 
     @include breakpoint($bp3) {
+      width: 49%;
+    }
+    @include breakpoint($bp4) {
       width: 48%;
     }
   }
@@ -109,7 +112,17 @@
       width: 78%;
     }
   }
-  
+
+  &--oneSixth-twoColumns {
+    @include breakpoint($bp3) {
+      width: 61%;
+    }
+
+    @include breakpoint($bp4) {
+      width: 31%;
+    }
+  }
+
   &--oneSixth {
     @include breakpoint($bp3) {
       width: 30%;
