--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-search/_listing-search.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-search/_listing-search.scss
@@ -51,3 +51,11 @@
     width: calc(100% - 225px);
   }
 }
+
+.listing-search__actions {
+  width: 100%;
+
+  @include breakpoint($bp2) {
+    width: 225px;
+  }
+}
