--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
@@ -52,7 +52,7 @@
     <div class="teaser__button">
       {% include "@atoms/icon-button/icon-button.twig" with {
         "url": provider.link.href,
-        "icon": provider.link.icon,
+        "button_icon": provider.link.icon,
         "text": provider.link.text,
         "variation": "small",
       } %}
