--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -131,6 +131,16 @@
     padding: .65em 1.35em 0 1em;
   }
 
+  .chosen-search-input {
+    width: calc(100% - 2.7em) !important;
+  }
+
+  .chosen-container .search-choice,
+  .chosen-container .chosen-results .active-result,
+  .facet-item__value {
+    text-transform: capitalize;
+  }
+
   .form-item__dropdown::after {
     top: 1.15em;
   }
@@ -154,6 +164,16 @@
     @include breakpoint($bp3) {
       margin-right: 1%;
     }
+
+    &--group {
+      .form-section__item {
+        margin-right: 0;
+
+        @include breakpoint($bp4) {
+          margin-right: 1%;
+        }
+      }
+    }
   }
 
   .form-item--checkbox__item {
@@ -170,10 +190,4 @@
       margin-left: .5em;
     }
   }
-}
-
-.chosen-container .search-choice
-.chosen-container .chosen-results .active-result,
-.facet-item__value {
-  text-transform: capitalize;
 }
