--- a/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
@@ -70,7 +70,6 @@
  *   in different view modes.
  */
 #}
-
 {% include "@organisms/teasers/provider-teaser/provider-teaser.twig" with {
     "provider": {
       "img": {
@@ -89,7 +88,7 @@
       "link": {
         "url": url,
         "text": "Request an Appointment"|t,
-        "button_icon": button_icon
+        "icon": button_icon
       }
     }
 } %}
