--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/recognition-row/recognition-row.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/recognition-row/recognition-row.twig
@@ -1,11 +1,13 @@
 <section class="recognition grid">
   <div class="recognition__items">
-    {% for item in recognitionItems %}
-      {% include "@molecules/recognition-card/recognition-card.twig" with {
-        image: item.image,
-        title: item.title,
-        desc: item.desc
-      } %}
-    {% endfor %}
+    {% block items %}
+      {% for item in recognitionItems %}
+        {% include "@molecules/recognition-card/recognition-card.twig" with {
+          image: item.image,
+          title: item.title,
+          desc: item.desc
+        } %}
+      {% endfor %}
+    {% endblock %}
   </div>
 </section>
