--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/recognition-card/_recognition-card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/recognition-card/_recognition-card.scss
@@ -55,21 +55,21 @@
   height: 0;
   padding: 56.25% 0 0 0; // this yields a 16:9 container
   overflow: hidden;
-}
 
-.recognition__image {
-  position: absolute;
-  display: block;
-  max-width: 100%;
-  max-height: 100%;
-  padding: .5em 1em;
-  width: auto;
-  height: auto;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
+  img {
+    position: absolute;
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    padding: .5em 1em;
+    width: auto;
+    height: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+  }
 }
 
 .recognition__title {
