--- a/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--cards.html.twig
+++ b/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--cards.html.twig
@@ -36,6 +36,7 @@
  * @ingroup themeable
  */
 #}
+{{ attach_library('tower_health/modal') }}
 <section class="card-group grid">
   {% include '@tower_health/paragraphs/paragraph-clean.html.twig' %}
 </section>
