--- a/docroot/themes/custom/tower_health/templates/fields/field--paragraph--field-education-type.html.twig
+++ b/docroot/themes/custom/tower_health/templates/fields/field--paragraph--field-education-type.html.twig
@@ -36,9 +36,7 @@
  *
  * @see template_preprocess_field()
  *
- * No wrappers for cards. It just doesn't flow with flexbox.
+ * No wrappers. It just doesn't flow with flexbox.
  */
 #}
-{% for item in items %}
-  {{ item.content }}
-{% endfor %}
+{% include '@tower_health/fields/field-clean.html.twig' %}
