--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/card.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/card.twig
@@ -1,13 +1,12 @@
 <div class="card js-section-animation
   {% if card.type %} card--{{ card.type }}{% endif %}
-  {% if card.image.src %} card--image{% endif %}
+  {% if card.image.src and card.image.src != "/" %} card--image{% endif %}
   {% if card.url.link == null %} card--simple{% endif %}">
-
   {% if card.url.link %}
     <a class="card__link" href="{{ card.url.link }}">
   {% endif %}
 
-  {% if card.image.src %}
+  {% if card.image.src and card.image.src != "/" %}
     <div class="card__image">
       <img src="{{ card.image.src }}" alt="{{ card.image.alt }}" />
     </div>
