Update search index for services and providers. Add facet and links to services.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/sidebar-cta-list/sidebar-cta-list.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/sidebar-cta-list/sidebar-cta-list.twig
@@ -2,7 +2,7 @@
   {% for item in cta_list %}
     {% include "@atoms/icon-button/icon-button.twig" with {
       "url": item.url,
-      "icon": item.icon,
+      "button_icon": item.icon,
       "text": item.text,
       "animated": "true",
       "variation": "list" 
