Adjust how background is added to provider.

--- a/docroot/themes/custom/tower_health/templates/layout/page--profile.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/page--profile.html.twig
@@ -47,5 +47,6 @@
   "button_icon": button_icon,
   "rating_icon": rating_icon,
   "page_header": page.page_header,
-  "top_sidebar": page.sidebar_first ?? ''
+  "top_sidebar": page.sidebar_first ?? '',
+  "page_background": true,
 } %}
