Update image style for pdf and make it so image is not required.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/file-download-cta/file-download-cta.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/file-download-cta/file-download-cta.twig
@@ -1,8 +1,10 @@
 <div class="grid">
   <article class="file-download">
-    <a class="file-download__image" href="{{ file.url }}">
-      <img src="{{ image.src }}" alt="{{ image.alt }}" />
-    </a>
+    {% if image %}
+      <a class="file-download__image" href="{{ file.url }}">
+        <img src="{{ image.src }}" alt="{{ image.alt }}" />
+      </a>
+    {% endif %}
     <div class="file-download__content">
       <h2 class='file-download__title'>
         <a href="{{ file.url }}">{{ title }}</a>
