--- a/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--file-download-cta.html.twig
+++ b/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--file-download-cta.html.twig
@@ -36,18 +36,21 @@
  * @ingroup themeable
  */
 #}
-{% set image = content.field_file_download_cta_image.0['#media'].field_media_image.entity.uri.value %}
-{% set image_src = image ? file_url(image) %}
+{% if content.field_file_download_cta_image|render %}
+  {% set image = {
+    'src': content.field_file_download_cta_image.0['#media'].field_media_image.entity.uri.value|image_style('pdf_thumbnail'),
+    'alt': content.field_file_download_cta_image.0['#media'].field_media_image.alt
+  } %}
+{% else %}
+  {% set image = '' %}
+{% endif %}
 
 {% set pdf = content.field_file_download_cta_file.0['#media'].field_media_file_1.entity.uri.value %}
 {% set pdf_src = image ? file_url(pdf) %}
 
 {% include "@organisms/file-download-cta/file-download-cta.twig" with {
   "title": content.field_file_download_cta_title,
-  "image": {
-    "src": image_src,
-    "alt": image_alt,
-  },
+  "image": image,
   "desc": content.field_file_download_cta_desc,
   "file": {
     "label": 'Download the PDF',
