reversed image banner option

--- a/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--image-teaser-banner.html.twig
+++ b/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--image-teaser-banner.html.twig
@@ -45,5 +45,6 @@
   },
   "title": content.field_image_banner_title,
   "text": content.field_image_banner_desc,
-  "links": links
+  "links": links,
+  "orientation": content.field_image_banner_display.0
 }%}
