fix box link background for styleguide

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.twig
@@ -6,7 +6,7 @@
         "title": box.title,
         "text": box.text,
         "link": box.link,
-        "image": box.image
+        "img": box.img
       }%}
     {% endfor %}
   </div>
