--- a/docroot/themes/custom/tower_health/templates/content/node--service--image-box-reference.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--service--image-box-reference.html.twig
@@ -78,7 +78,7 @@
     "text": content.field_service_card_cta
   },
   "img": {
-    "src": file_url(node.field_service_card_image.entity.field_media_image.entity.fileuri),
+    "src": file_url(node.field_service_card_image.entity.field_media_image.entity.uri.value|image_style('image_card')),
     "alt": node.field_service_card_image.entity.field_media_image.entity.alt.value
   }
 }%}
