add directions link

--- a/docroot/themes/custom/tower_health/templates/content/node--location--page-header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--page-header.html.twig
@@ -79,7 +79,7 @@
   "address_1": address_1,
   "address_2": address_2,
   "directions": {
-    "link": "",
+    "url": href,
     "button_icon": button_icon,
     "text": "Map & Directions"|t,
     "variation": small
