open PDF in new tab

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/file-download-cta/file-download-cta.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/file-download-cta/file-download-cta.twig
@@ -10,7 +10,7 @@
         <a href="{{ file.url }}">{{ title }}</a>
       </h2>
       <div class='file-download__desc'>{{ desc }}</div>
-      <a class='file-download__cta' href="{{ file.url }}">{{ file.label }}</a>
+      <a class='file-download__cta' href="{{ file.url }}" target="_blank">{{ file.label }}</a>
     </div>
   </article>
 </div>
